fix(act): text-align left in form

--- a/src/assets/scss/organisms/_act.scss
+++ b/src/assets/scss/organisms/_act.scss
@@ -38,6 +38,10 @@
   }
 }
 
+.act__form {
+  text-align: left;
+}
+
 .act__input {
   width: 100%;
   margin-bottom: 10px;
